--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <netbeans.hint.deploy.server>gfv3ee6</netbeans.hint.deploy.server>
+        <seam.version>3.0.0.Final</seam.version>
     </properties>
 
     <dependencies>
@@ -41,6 +42,13 @@
             <version>6.0.1</version>
             <scope>test</scope>
         </dependency>-->
+        
+        <dependency>
+            <groupId>org.jboss.seam.security</groupId>
+            <artifactId>seam-security</artifactId>
+            <version>${seam.version}</version>
+        </dependency>
+        
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
