--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,30 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee        
                 http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+<!--    spring security config--> 
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath:applicationContext.xml</param-value>
+    </context-param>
+    
+    
+    <!--use the listener to load spring configuration file -->
+    <listener>
+        <listener-class>
+            org.springframework.web.context.ContextLoaderListener
+        </listener-class>
+    </listener>
+
     <!-- An optional parameter that makes troubleshooting errors much easier -->
     <!-- You should remove this context parameter before deploying to production! -->
     <context-param>
@@ -21,6 +45,9 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
         <param-name>primefaces.THEME</param-name>
         <param-value>smoothness</param-value>
     </context-param>
+  
+  
+   
     
     <!-- JSF 2.0 Servlet activates automatically when the WEB-INF/faces-config.xml descriptor is present -->
 
@@ -80,15 +107,30 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
     
+
     
       <!--JAAS configuration declaring the realm, login and login page error-->
 <!--    <login-config>
         <auth-method>FORM</auth-method>
-        <realm-name>bitops-realm</realm-name>
+        <realm-name>jdbc-jdbcrealm</realm-name>
         <form-login-config>
             <form-login-page>/login.xhtml</form-login-page>
             <form-error-page>/loginError.xhtml</form-error-page>
         </form-login-config>
-    </login-config>-->
+    </login-config>
+    
+    declaration of the Roles for the application 
+    <security-role>
+        <role-name>basicuser</role-name>
+    </security-role>
+    <security-role>
+        <role-name>admin</role-name>
+    </security-role>
+    <security-role>
+        <role-name>receptionist</role-name>
+    </security-role>
+    <security-role>
+        <role-name>accountant</role-name>
+    </security-role>-->
  
 </web-app>
